Fix footer issues to make it the bottom-most element and added scrollable items if it gets too long

--- a/static/css/lecture-questions.css
+++ b/static/css/lecture-questions.css
@@ -1,7 +1,6 @@
 section#questions_table {
   padding: 1rem 0;
   overflow-y: auto;
-  height: 80vh;
 }
 
 section#questions_table div {
